--- a/store/src/App.css
+++ b/store/src/App.css
@@ -26,7 +26,7 @@ body {
   color: var(--lightBlue);
 }
 
-.btn-cart {
+/* .btn-cart {
   color: var(--lightBlue);
   border: 0.05rem solid var(--lightBlue);
   border-radius: 0.2rem;
@@ -45,4 +45,4 @@ body {
 
 .btn-cart:focus {
   outline: none;
-}
+} */
